# pydisort

./: .bumpversion.cfg  .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  1.setup.sh  2.install.sh  3.build.sh  4.test.sh  Brewfile  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README - Overview of the DISORT project in Fortran, C, C++, Python.md  README-cdisort.md  README-devops.md  README-install.md  README-workflow.md  README.md  README_DISORT.md  README_pypi.md  bump_version.py  configure.hpp.in  pyproject.toml  requirements.txt  semantic-release.yaml  semantic_release.yaml  semantic_release.yml  setup.cfg  setup.py  version.h.in
.github/workflows/: bump-and-tag.yaml  bump-version.yaml  cd.yml  ci.yaml  ci.yml  distribute.yml  main.yml  packaging.yml  pypi.yml  python-package.yml  release.yaml
cdisort213/: CMakeLists.txt  HOWTO_cdisort  Makefile_cdisort  cdisort.c  cdisort.h  locate.cu  locate.h  split.py
cdisort213/cu_src/: c_albtrans.cu  c_albtrans_intensity.cu  c_albtrans_spherical.cu  c_asymmetric_matrix.cu  c_bidir_reflectivity.cu  c_bidir_reflectivity_hapke.cu  c_bidir_reflectivity_rpv.cu  c_chapman.cu  c_chapman_simpler.cu  c_check_inputs.cu  c_dbl_vector.cu  c_disort.cu  c_disort_out_alloc.cu  c_disort_out_free.cu  c_disort_set.cu  c_disort_state_alloc.cu  c_disort_state_free.cu  c_dref.cu  c_errmsg.cu  c_fcmp.cu  c_fluxes.cu  c_free_dbl_vector.cu  c_gaussian_quadrature.cu  c_gaussian_quadrature_test.cu  c_getmom.cu  c_int_vector.cu  c_intensity_components.cu  c_intensity_correction.cu  c_inter.cu  c_interp_coefficients_beam_source.cu  c_interp_eigenvec.cu  c_interp_source.cu  c_isamax.cu  c_legendre_poly.cu  c_new_intensity_correction.cu  c_new_secondary_scat.cu  c_planck_func1.cu  c_planck_func2.cu  c_print_albtrans.cu  c_print_avg_intensities.cu  (+44 more)
cmake/: compilers.cmake  fmt.cmake  memorypool.cmake  pybind11.cmake  setup_compiler_flags.cmake  tomlpp.cmake
cmake/macros/: macro_setup_problem.cmake  macro_setup_test.cmake
cmake/modules/: FindTorch.cmake
doc/: CONTRIBUTING.md  PATCHES.md  README-CICD.md  README-devops.md  README-install.md  README-patches.md  README-workflow.md  README_DISORT.md  README_cd.md  README_devops.md  README_pypi.md  README_venv.md  README_workflow_collaborators.md
docs/: requirements.txt
docs/_static/: DISORT2.doc  custom.css
docs/source/: api.rst  conf.py  contribute.rst  devops.rst  dispatch.rst  index.rst  overview.rst_  venv.rst  workflow.rst_
docs_sphinx/: requirements.txt
docs_sphinx/source/: conf.py  index.rst
examples/: CMakeLists.txt
interface/: CMakeLists.txt  cppdisort.cpp  cppdisort.hpp
python/: CMakeLists.txt  __init__.py  bind_cdisort.cpp  bind_disort_options.cpp  bind_phase_options.cpp  cdisort213  lib  load_preset.py  pybind_cppdisort.cpp  pybind_cppdisort.cpp.sav  pydisort.cpp  pyoptions.hpp
python/csrc/: bind_cdisort.cpp  bind_disort_options.cpp  pydisort.cpp  pyoptions.hpp
python/src/: bind_disort_options.cpp  pydisort.cpp
src/: CMakeLists.txt  add_arg.h  common.h  disort.cpp  disort.hpp  disort_dispatch.cpp  disort_dispatch.cu  disort_dispatch.hpp  disort_formatter.hpp  disort_impl.h  index.h  loops.cuh  scattering_moments.cpp  scattering_moments.hpp  vectorize.cpp  vectorize.hpp  version.h
src/cdisort/: CMakeLists.txt  cdisort.c  cdisort.h  locate.c  locate.h
src/cppdisort/: CMakeLists.txt  cppdisort.cc  cppdisort.cpp  cppdisort.h  cppdisort.hpp
src/pydisort/: CMakeLists.txt  __init__.py  cppdisort.cpp  cppdisort.hpp  version.py
src/utils/: DispatchStub.cpp
tests/: CMakeLists.txt  isotropic_scattering.toml  test_attenuation.py  test_disort.cpp  test_disort_01.py  test_disort_09.py  test_isotropic_scattering.py
tests/cdisort/: CMakeLists.txt  print_test.c  test_cdisort.c
tests/cdisort213/: CMakeLists.txt  test_cdisort.c  test_cdisort_09.c
tests/cppdisort/: CMakeLists.txt  input.toml  test_cppdisort.cpp  test_cppdisort_v2.cpp
tests/interface/: CMakeLists.txt
tests/python/: CMakeLists.txt  input.toml  test_isotropic_scattering.py  test_isotropic_scattering.py_
tests/src/: CMakeLists.txt  print_test.c
tools/: check_style.sh  run_clang_format.sh
