[build-system]
requires = ["setuptools", "wheel", "cmake", "pybind11", "numpy", "torch"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
before-build = """
pip install -r requirements.txt
cmake -B build -DCMAKE_BUILD_TYPE=Release
cmake --build build --config Release
"""

# Install system library
[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
