[metadata]
name = pydisort
version = 0.10.13
description = Modern Python interfece of DISORT
long_description = file: doc/README_pypi.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/zoeyzyhu/pydisort
author = Zoey Hu
author_email = zoey.zyhu@gmail.com
keywords = radiative transfer
license = GPL
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Documentation = https://github.com/zoeyzyhu/pydisort/
    Source = https://github.com/zoeyzyhu/pydisort/src
    Tracker = https://github.com/zoeyzyhu/pydisort/issues

[options]
zip_safe = False
include_package_data = False
python_requires = >=3.8

# These options exclude data from the wheel file but not from the sdist
[options.exclude_package_data]
pydisort = *.cpp, *.cu, *.h
