[metadata]
name = pydisort
version = 1.1.5
description = Modern Python interface for DISORT
long_description = file: README_pypi.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/zoeyzyhu/pydisort
author = Zoey Hu
author_email = zoey.zyhu@gmail.com
keywords = radiative transfer, atmospheric science
license = GPL-3.0-or-later
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X

project_urls =
    Documentation = https://github.com/zoeyzyhu/pydisort
    Source = https://github.com/zoeyzyhu/pydisort
    Tracker = https://github.com/zoeyzyhu/pydisort/issues

[options]
zip_safe = False
include_package_data = False
python_requires = >=3.9
packages = find:
install_requires =
    numpy
    torch>=2.7.0

[options.exclude_package_data]
pydisort =
    *.cpp
    *.cu
    *.h
